--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -242,7 +242,8 @@ textarea {
     min-height: 31.25rem;
     background-image: url("../../assets/about.jpg");
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
+    background-position: center;
     width: 50%;
     position: relative; }
     @media only screen and (max-width: 659px) {
@@ -396,7 +397,6 @@ textarea {
     .c-contact-content .contact-item {
       display: flex;
       justify-content: center;
-      align-items: center;
       padding: 1.25rem;
       margin: 1.25rem;
       flex-grow: 1;
