--- a/styles/components/header.scss
+++ b/styles/components/header.scss
@@ -5,9 +5,25 @@
     padding: rem(20 70);
     width: 100%;
     position: fixed;
-    background: $white;
+    background: transparent;
     z-index: 9999999;
-    box-shadow: 0 1px 5px 0 rgba(0,0,0,0.098039215686275);
+    color: $white;   
+    
+
+    &.scrolled {
+        box-shadow: 0 1px 5px 0 rgba(0,0,0,0.098039215686275);
+        background: $white;
+        transition: all 0.3s ease;
+        color: $bodyText;
+
+        li {
+            color: $bodyText;
+        }
+
+        svg {
+            fill: $bodyText;;
+        }
+    }
 
     .nav-link {
         &:hover {
@@ -30,13 +46,15 @@
 
     &_links {
         display: flex;
-        justify-content: center;   
+        justify-content: center;
+       
         
         ul {
             display: flex;
             list-style: none;
             li {
                 padding: rem(0 15);
+                color: $white;   
             }
         }
 
@@ -74,11 +92,11 @@
     &_social {
         display: flex;
         justify-content: center;
-        align-items: center ;
+        align-items: center;
         svg {
             width: rem(25);
             margin-left: rem(10);
-            fill:#707070
+            fill:$white
         }
 
         svg:hover {
