General styling changes

--- a/styles/components/about.scss
+++ b/styles/components/about.scss
@@ -33,7 +33,7 @@
         
         @media only screen and (max-width: 659px) {
             width: 100%;
-            padding: rem(20);
+            padding: rem(50 20);
         }
     }
 }
