--- a/styles/components/main-banner.scss
+++ b/styles/components/main-banner.scss
@@ -3,11 +3,10 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    min-height: rem(800);
+    min-height: rem(700);
     background-image: url('../../assets/banner.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    padding-top: rem(90);
 
     &-title {
         display: flex;
@@ -16,9 +15,11 @@
         align-items: center;
         color: $white;
         text-align: center;
+        max-width: rem(700);
 
         h1 {
             margin: rem(20 0);
+            font-size: rem(60);
         }
     }
 }
