--- a/styles/core.scss
+++ b/styles/core.scss
@@ -1,17 +1,22 @@
 * {
     box-sizing: border-box;
 }
+@font-face {
+    font-family: Sassoon;
+    src: url('../../font/Sassoon Primary Regular/Sassoon-Williams - SassoonPrimaryRg.ttf');
+}
 
 html, body {
     margin: 0;
     padding: 0;
-    font-size: 16px;
+    font-size: 18px;
     height: 100%;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background: $white;
-    font-family: sans-serif;
+    // font-family: sans-serif;
+    font-family: Sassoon, Helvetica, sans-serif;
     color: $bodyText;
     scroll-behavior: smooth;
 }
