--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -1,16 +1,19 @@
 * {
   box-sizing: border-box; }
 
+@font-face {
+  font-family: Sassoon;
+  src: url("../../font/Sassoon Primary Regular/Sassoon-Williams - SassoonPrimaryRg.ttf"); }
 html, body {
   margin: 0;
   padding: 0;
-  font-size: 16px;
+  font-size: 18px;
   height: 100%;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #fff;
-  font-family: sans-serif;
+  font-family: Sassoon, Helvetica, sans-serif;
   color: #707070;
   scroll-behavior: smooth; }
 
@@ -205,20 +208,21 @@ textarea {
   justify-content: center;
   align-items: center;
   width: 100%;
-  min-height: 50rem;
+  min-height: 43.75rem;
   background-image: url("../../assets/banner.jpg");
   background-repeat: no-repeat;
-  background-size: cover;
-  padding-top: 5.625rem; }
+  background-size: cover; }
   .c-banner-title {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     color: #fff;
-    text-align: center; }
+    text-align: center;
+    max-width: 43.75rem; }
     .c-banner-title h1 {
-      margin: 1.25rem 0; }
+      margin: 1.25rem 0;
+      font-size: 3.75rem; }
 
 .c-process {
   background-color: #F5B900;
