--- a/styles/components/footer.scss
+++ b/styles/components/footer.scss
@@ -36,6 +36,10 @@ footer {
                     flex-direction: column;
                     align-items: center;
                 }
+
+                @media only screen and (max-width: 755px) {
+                    margin: rem(20 0);
+                }
                 
                 li {
                     padding: rem(0 15);
@@ -58,7 +62,6 @@ footer {
             flex-grow: 1;
             svg {
                 width: rem(25);
-                margin-left: rem(10);
                 fill:$white
             }
     
