--- a/styles/components/header.scss
+++ b/styles/components/header.scss
@@ -6,7 +6,7 @@
     width: 100%;
     position: fixed;
     background: transparent;
-    z-index: 9999999;
+    z-index: 2;
     color: $white; 
     transition: all 0.3s ease;
     
