--- a/styles/main.scss
+++ b/styles/main.scss
@@ -14,5 +14,6 @@
         './components/contact.scss',
         './components/contact-form.scss',
         './components/footer.scss',
-        './components/reviews.scss'
+        './components/reviews.scss',
+        './components/magnific.scss'
         ;
