--- a/styles/components/gallery.scss
+++ b/styles/components/gallery.scss
@@ -90,3 +90,90 @@
         }
     }
 }
+
+.c-gallery {
+    width: 100%;
+    &-banner {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        min-height: rem(450);
+        background-image: url('../../images/banner.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+
+    &-content {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        max-width: 100%;
+        margin: auto;
+        position: relative;
+        top: rem(-100);
+
+        a {
+            display: flex;
+            justify-content: center;
+        }
+
+        .gallery-item {
+            max-width: 460px;
+            max-height: 500px;
+            border-radius: rem(8);
+            margin: rem(10);
+            display: flex;
+            flex: auto;
+            flex-grow: 1;
+            flex-basis: rem(250);
+            justify-content:space-between;
+            align-items: center; 
+            object-fit: cover;
+            box-shadow: 0 1px 5px 0 rgba(0,0,0,0.3);
+            cursor: pointer;
+                &:hover {
+                    box-shadow: 0 1px 5px 0 rgba(0,0,0,0.8);
+                }
+
+            @media only screen and (max-width: 659px) {
+                max-width: 90%
+            }
+
+            &::before {
+                content: " ";
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                width: 30px;
+                height: 30px;
+                border: 2px solid red;
+                border-color: transparent #e1e1e1 transparent #e1e1e1;
+                border-radius: 50%;
+                animation: loader 1s linear infinite;
+                z-index: 0;
+            }
+   
+
+            img {
+                width: auto;
+                height: 100%;
+                flex: 1;
+                position: relative;
+                cursor: pointer;
+
+                
+            }
+
+            
+        }
+        @keyframes loader {
+            0% {
+              transform: translate(-50%,-50%) rotate(0deg);
+            }
+            100% {
+              transform: translate(-50%,-50%) rotate(360deg);
+            }
+          }
+    }
+}
