--- a/styles/components/gallery.scss
+++ b/styles/components/gallery.scss
@@ -64,6 +64,12 @@
         display: flex;
         margin: auto;
         flex-wrap: wrap;
+
+        a {
+            display: flex;
+            flex-grow: 1;
+            flex-basis: 300px;
+        }
     
         .item {
             margin: rem(5);
