--- a/styles/components/main-banner.scss
+++ b/styles/components/main-banner.scss
@@ -26,7 +26,7 @@
     .scroll-down {
       position: absolute;
       bottom: rem(20);
-      left: 50%;
+      margin: auto;
       width: 24px;
       height: 24px;
       border-left: 1px solid #fff;
@@ -35,7 +35,6 @@
       transform: rotate(-45deg);
       -webkit-animation: sdb04 2s infinite;
       animation: sdb04 2s infinite;
-      box-sizing: border-box;
     }
 
 
