--- a/styles/core.scss
+++ b/styles/core.scss
@@ -11,6 +11,7 @@ html, body {
     margin: 0;
     padding: 0;
     font-size: 18px;
+    line-height: 1.4;
     height: 100%;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
