--- a/styles/core.scss
+++ b/styles/core.scss
@@ -4,14 +4,13 @@
 @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css);
 @font-face {
     font-family: Sassoon;
-    src: url('../../font/Sassoon Primary Regular/Sassoon-Williams - SassoonPrimaryRg.ttf');
+    src: url('../../font/Sassoon Primary Regular/SassoonSansStd.otf');
 }
 
 html, body {
     margin: 0;
     padding: 0;
-    font-size: 18px;
-    line-height: 1.4;
+    font-size: 17px;
     height: 100%;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
