--- a/styles/core.scss
+++ b/styles/core.scss
@@ -19,6 +19,7 @@ html, body {
     font-family: Sassoon, Helvetica, sans-serif;
     color: $bodyText;
     scroll-behavior: smooth;
+    line-height: 1.6;
 }
 
 .back-to-top {
@@ -93,6 +94,7 @@ button {
     border: 2px solid $white;
     border-radius: rem(50);
     padding: rem(10 30);
+    line-height: 30px;
 
     &:hover {
         background: $brand;
