Removing new font to test

--- a/styles/core.scss
+++ b/styles/core.scss
@@ -4,7 +4,7 @@
 @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css);
 @font-face {
     font-family: Sassoon;
-    src: url('../../font/Sassoon Primary Regular/SassoonSansStd.otf');
+    src: url('../../font/Sassoon Primary Regular/Sassoon-Williams - SassoonPrimaryRg.ttf');
 }
 
 html, body {
