--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: Sassoon;
-  src: url("../../font/Sassoon Primary Regular/SassoonSansStd.otf"); }
+  src: url("../../font/Sassoon Primary Regular/Sassoon-Williams - SassoonPrimaryRg.ttf"); }
 html, body {
   margin: 0;
   padding: 0;
