Adding line height in media query

--- a/styles/components/main-banner.scss
+++ b/styles/components/main-banner.scss
@@ -19,7 +19,8 @@
 
         h1 {
             margin: rem(20 0);
-            font-size: rem(60);
+            font-size: 60px;
+            line-height: 1.2;
         }
     }
 
