--- a/styles/core.scss
+++ b/styles/core.scss
@@ -10,7 +10,7 @@
 html, body {
     margin: 0;
     padding: 0;
-    font-size: 17px;
+    font-size: 18px;
     height: 100%;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
@@ -19,6 +19,11 @@ html, body {
     font-family: Sassoon, Helvetica, sans-serif;
     color: $bodyText;
     scroll-behavior: smooth;
+    line-height: 1.4rem;
+
+    @media only screen and (max-width:480px){
+        line-height: 1.2rem;
+    }
 }
 
 .back-to-top {
