--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -8,7 +8,7 @@
 html, body {
   margin: 0;
   padding: 0;
-  font-size: 17px;
+  font-size: 18px;
   height: 100%;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -16,7 +16,11 @@ html, body {
   background: #fff;
   font-family: Sassoon, Helvetica, sans-serif;
   color: #707070;
-  scroll-behavior: smooth; }
+  scroll-behavior: smooth;
+  line-height: 1.4rem; }
+  @media only screen and (max-width: 480px) {
+    html, body {
+      line-height: 1.2rem; } }
 
 .back-to-top {
   position: fixed;
@@ -273,7 +277,8 @@ textarea {
     max-width: 43.75rem; }
     .c-banner-title h1 {
       margin: 1.25rem 0;
-      font-size: 3.75rem; }
+      font-size: 60px;
+      line-height: 1.2; }
   .c-banner .scroll-down {
     position: absolute;
     bottom: 1.25rem;
