--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -16,8 +16,7 @@ html, body {
   background: #fff;
   font-family: Sassoon, Helvetica, sans-serif;
   color: #707070;
-  scroll-behavior: smooth;
-  line-height: 1.6; }
+  scroll-behavior: smooth; }
 
 .back-to-top {
   position: fixed;
@@ -67,7 +66,7 @@ a {
 
 p, h1, h2, h3, h4, h5 {
   margin: 0;
-  line-height: initial; }
+  line-height: 150%; }
 
 button {
   cursor: pointer;
