--- a/styles/core.scss
+++ b/styles/core.scss
@@ -1,16 +1,17 @@
 * {
     box-sizing: border-box;
+    line-height: 150%;
 }
 @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css);
-// @font-face {
-//     font-family: Sassoon;
-//     src: url('../../font/Sassoon Primary Regular/Sassoon-Williams - SassoonPrimaryRg.ttf');
-// }
+@font-face {
+    font-family: Sassoon;
+    src: url('../../font/Sassoon Primary Regular/Sassoon-Primary.otf');
+}
 
 html, body {
     margin: 0;
     padding: 0;
-    font-size: 18px;
+    font-size: 16px;
     height: 100%;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
@@ -80,7 +81,6 @@ a {
 
 p,h1,h2,h3,h4,h5, li {
     margin: 0;
-    line-height: 150%;
 }
 
 button {
