--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -1,11 +1,15 @@
 @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css);
 * {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  line-height: 150%; }
 
+@font-face {
+  font-family: Sassoon;
+  src: url("../../font/Sassoon Primary Regular/Sassoon-Primary.otf"); }
 html, body {
   margin: 0;
   padding: 0;
-  font-size: 18px;
+  font-size: 16px;
   height: 100%;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -62,8 +66,7 @@ a {
   text-decoration: none; }
 
 p, h1, h2, h3, h4, h5, li {
-  margin: 0;
-  line-height: 150%; }
+  margin: 0; }
 
 button {
   cursor: pointer;
