--- a/styles/components/header.scss
+++ b/styles/components/header.scss
@@ -51,7 +51,7 @@
         }
         @media only screen and (max-width: 659px) {
             color: $bodyText;
-            font-weight: bold;
+          
             &:hover {
                 color: $white;
                 cursor: pointer;
@@ -91,8 +91,8 @@
         @media only screen and (max-width: 659px) {
             position: absolute;
             right: 0;
-            height: calc(100vh - 69px);
-            top: rem(69);
+            height: calc(100vh - 76px);
+            top: rem(76);
             background: $brand;
             width: 57%;
             transform: translateX(100%);
@@ -101,6 +101,7 @@
             justify-content: space-between;
             padding: rem(20);
             z-index: 101;
+            overflow-y: scroll;
             ul {
                 flex-direction: column;
                 align-items: center;
