--- a/styles/components/main-banner.scss
+++ b/styles/components/main-banner.scss
@@ -19,7 +19,16 @@
 
         h1 {
             margin: rem(20 0);
-            font-size: 60px;
+            font-size: 55px;
+            @media only screen and (max-width: 500px) {
+              font-size: 210%;
+            }
+        }
+
+        h2 {
+          @media only screen and (max-width: 500px) {
+            font-size: 100%;
+          }
         }
     }
 
