--- a/styles/core.scss
+++ b/styles/core.scss
@@ -83,6 +83,10 @@ p,h1,h2,h3,h4,h5, li {
     margin: 0;
 }
 
+ h3 {
+    color: $bodyHeaders;
+}
+
 button {
     cursor: pointer;
     font: inherit;
