--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -8,7 +8,8 @@ $error: #FFBABA !default;
 $errorRed: #cc0000 !default;
 $green: #40C237 !default;
 $navy: #324a5e !default;
-$bodyText: #707070 !default;
+$bodyHeaders: #707070 !default;
+$bodyText: #9e9e9e !default;
 $border-color: #E2E6E7 !default;
 $placeholder: #A8B1B6 !default; 
 $DarkGreen: #0D8547 !default;
