--- a/styles/components/header.scss
+++ b/styles/components/header.scss
@@ -29,18 +29,22 @@
         box-shadow: 0 1px 5px 0 rgba(0,0,0,0.098039215686275);
         background: $white;
         transition: all 0.3s ease;
-        color: $bodyText;
+        color: $bodyHeaders;
 
         a {
-            color: $bodyText;
+            color: $bodyHeaders;
         }
 
         li {
-            color: $bodyText;
+            color: $bodyHeaders;
         }
 
         svg {
-            fill: $bodyText;;
+            fill: $bodyHeaders;
+        }
+
+        h1 {
+            color: $bodyHeaders
         }
     }
 
@@ -50,7 +54,7 @@
             cursor: pointer;
         }
         @media only screen and (max-width: 659px) {
-            color: $bodyText;
+            color: $bodyHeaders;
           
             &:hover {
                 color: $white;
@@ -62,10 +66,10 @@
     @media only screen and (max-width: 659px) {
         padding: rem(20 20);
         background-color: $white;
-        color: $bodyText;
+        color: $bodyHeaders;
 
         a {
-            color: $bodyText;
+            color: $bodyHeaders;
         }
 
         svg {
@@ -101,7 +105,7 @@
             justify-content: space-between;
             padding: rem(20);
             z-index: 101;
-            overflow-y: scroll;
+            overflow-y: auto;
             ul {
                 flex-direction: column;
                 align-items: center;
@@ -145,7 +149,7 @@
         display: none;
         cursor: pointer;
         div {
-            background-color: $bodyText;
+            background-color: $bodyHeaders;
             border-radius: 2px;
             width: 25px;
             height: 3px;
