--- a/styles/components/reviews.scss
+++ b/styles/components/reviews.scss
@@ -10,6 +10,12 @@
     margin-top: 100px;
 }
 
+.reviewTitle {
+  h2 {
+    color: $bodyHeaders
+  }
+}
+
 .reviewContent {
     display: flex;
     flex-direction: row;
