--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -16,7 +16,7 @@ html, body {
   -moz-osx-font-smoothing: grayscale;
   background: #fff;
   font-family: Sassoon, Helvetica, sans-serif;
-  color: #707070;
+  color: #9e9e9e;
   scroll-behavior: smooth; }
 
 .back-to-top {
@@ -62,11 +62,14 @@ ul {
   color: #DF8B0D; }
 
 a {
-  color: #707070;
+  color: #9e9e9e;
   text-decoration: none; }
 
 p, h1, h2, h3, h4, h5, li {
   margin: 0; }
+
+h3 {
+  color: #707070; }
 
 button {
   cursor: pointer;
@@ -159,6 +162,8 @@ textarea {
       color: #707070; }
     .c-header.scrolled svg {
       fill: #707070; }
+    .c-header.scrolled h1 {
+      color: #707070; }
   .c-header .nav-link:hover {
     color: #DF8B0D;
     cursor: pointer; }
@@ -176,7 +181,7 @@ textarea {
       .c-header a {
         color: #707070; }
       .c-header svg {
-        fill: #707070; } }
+        fill: #9e9e9e; } }
   .c-header_links {
     display: flex;
     justify-content: center; }
@@ -201,7 +206,7 @@ textarea {
         justify-content: space-between;
         padding: 1.25rem;
         z-index: 101;
-        overflow-y: scroll; }
+        overflow-y: auto; }
         .c-header_links ul {
           flex-direction: column;
           align-items: center;
@@ -361,6 +366,8 @@ textarea {
     width: 100%;
     text-align: center;
     min-height: 120px; }
+    .room-title h2 {
+      color: #707070; }
   .room-body {
     max-width: 1400px;
     width: 100%;
@@ -466,6 +473,8 @@ textarea {
   .c-welcome-title {
     margin-bottom: 3.125rem;
     padding: 0 1.25rem 1.25rem 1.25rem; }
+    .c-welcome-title h2 {
+      color: #707070; }
     @media only screen and (max-width: 800px) {
       .c-welcome-title {
         text-align: justify; }
@@ -478,8 +487,7 @@ textarea {
     max-width: 75rem;
     margin: auto;
     word-wrap: break-word;
-    padding-bottom: 100px;
-    color: #888899; }
+    padding-bottom: 100px; }
     .c-welcome-content h3 {
       margin-bottom: 0.625rem; }
     .c-welcome-content .philosiphy {
@@ -557,7 +565,7 @@ textarea {
     padding: 1.25rem;
     display: flex;
     flex-wrap: wrap;
-    color: #707070;
+    color: #9e9e9e;
     border-radius: 0.5rem;
     box-shadow: 0px 10px 13px -6px rgba(0, 0, 0, 0.08), 0px 20px 31px 3px rgba(0, 0, 0, 0.09), 0px 8px 20px 7px rgba(0, 0, 0, 0.02); }
     .c-programmes-content .program {
@@ -592,7 +600,7 @@ textarea {
   text-align: center;
   color: #fff; }
   .price-container p {
-    color: #707070; }
+    color: #9e9e9e; }
   .price-container .divider {
     background-color: #fff; }
 
@@ -668,7 +676,7 @@ ul {
   font-weight: 600; }
 
 .pricing-features {
-  color: #707070;
+  color: #9e9e9e;
   margin: 0px 0 25px; }
 
 .pricing-plan p {
@@ -772,6 +780,8 @@ ul {
   .c-contact-form_title {
     text-align: center;
     margin-bottom: 3.125rem; }
+    .c-contact-form_title h2 {
+      color: #707070; }
   .c-contact-form .contact-form {
     display: flex;
     flex-direction: column; }
@@ -863,6 +873,8 @@ footer {
   footer .c-footer-logo {
     text-align: center;
     flex-grow: 1; }
+    footer .c-footer-logo h3 {
+      color: #fff; }
   footer .c-footer_links {
     display: flex;
     justify-content: center;
@@ -907,6 +919,9 @@ footer {
   max-width: 1200px;
   margin: auto;
   margin-top: 100px; }
+
+.reviewTitle h2 {
+  color: #707070; }
 
 .reviewContent {
   display: flex;
